// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls/ToggleButton captions and value false 1`] = `
<div>
  <span
    class="controls-BaseButton controls-Button_clickable controls-Button_bg-same controls-linkButton-style controls-button_link-style controls-button_size-undefined controls-linkButton_link-link-style  controls-linkButton_fontColorStyle-link-style  controls-Button_notCircle controls-button_fontsize-m controls-notFocusOnEnter controls_toggle_theme-default "
    tabindex="0"
  >
    <span
      class="controls-BaseButton__wrapper controls-Button__wrapper_viewMode-link controls-BaseButton__wrapper_captionPosition_end controls-Button_textAlign-center"
    >
      <span
        class="controls-BaseButton__text controls-Button__text_viewMode-link"
        tabindex="0"
      >
        Save
      </span>
    </span>
  </span>
</div>
`;

exports[`Controls/ToggleButton captions and value true 1`] = `
<div>
  <span
    class="controls-BaseButton controls-Button_clickable controls-Button_bg-same controls-Button_toggled controls-linkButton-style controls-button_link-style controls-button_size-undefined controls-linkButton_link-link-style_toggled  controls-linkButton_fontColorStyle-link-style  controls-Button_notCircle controls-button_fontsize-m controls-notFocusOnEnter controls_toggle_theme-default "
    tabindex="0"
  >
    <span
      class="controls-BaseButton__wrapper controls-Button__wrapper_viewMode-link controls-BaseButton__wrapper_captionPosition_end controls-Button_textAlign-center"
    >
      <span
        class="controls-BaseButton__text controls-Button__text_viewMode-link"
        tabindex="0"
      >
        Change
      </span>
    </span>
  </span>
</div>
`;

exports[`Controls/ToggleButton iconStyles and value false 1`] = `
<div>
  <span
    class="controls-BaseButton controls-Button_clickable controls-Button_bg-same controls-button-style controls-button_ghost-style controls-button_size-l controls-button_ghost-default-style  controls-button_fontColorStyle-undefined-style  controls-Button_circle controls-button_fontsize-m controls-notFocusOnEnter controls_toggle_theme-default "
    tabindex="0"
  >
    <span
      class="controls-BaseButton__wrapper controls-Button__wrapper_viewMode-ghost controls-BaseButton__wrapper_captionPosition_end controls-Button_textAlign-center"
    />
  </span>
</div>
`;

exports[`Controls/ToggleButton iconStyles and value true 1`] = `
<div>
  <span
    class="controls-BaseButton controls-Button_clickable controls-Button_bg-same controls-Button_toggled controls-button-style controls-button_ghost-style controls-button_size-l controls-button_ghost-default-style_toggled  controls-button_fontColorStyle-undefined-style  controls-Button_circle controls-button_fontsize-m controls-notFocusOnEnter controls_toggle_theme-default "
    tabindex="0"
  >
    <span
      class="controls-BaseButton__wrapper controls-Button__wrapper_viewMode-ghost controls-BaseButton__wrapper_captionPosition_end controls-Button_textAlign-center"
    />
  </span>
</div>
`;

exports[`Controls/ToggleButton icons and value false 1`] = `
<div>
  <span
    class="controls-BaseButton controls-Button_clickable controls-Button_bg-same controls-button-style controls-button_ghost-style controls-button_size-l controls-button_ghost-default-style  controls-button_fontColorStyle-undefined-style  controls-Button_circle controls-button_fontsize-m controls-button_icon-style-secondary controls-button_hover_icon-style-secondary controls-notFocusOnEnter controls_toggle_theme-default "
    tabindex="0"
  >
    <span
      class="controls-BaseButton__wrapper controls-Button__wrapper_viewMode-ghost controls-BaseButton__wrapper_captionPosition_end controls-Button_textAlign-center"
    >
      <i
        class="controls-BaseButton__icon controls-icon_size-m controls-icon icon-ArrangeList04"
        tabindex="0"
      />
    </span>
  </span>
</div>
`;

exports[`Controls/ToggleButton icons and value true 1`] = `
<div>
  <span
    class="controls-BaseButton controls-Button_clickable controls-Button_bg-same controls-Button_toggled controls-button-style controls-button_ghost-style controls-button_size-l controls-button_ghost-default-style_toggled  controls-button_fontColorStyle-undefined-style  controls-Button_circle controls-button_fontsize-m controls-button_icon-style-secondary controls-button_hover_icon-style-secondary controls-notFocusOnEnter controls_toggle_theme-default "
    tabindex="0"
  >
    <span
      class="controls-BaseButton__wrapper controls-Button__wrapper_viewMode-ghost controls-BaseButton__wrapper_captionPosition_end controls-Button_textAlign-center"
    >
      <i
        class="controls-BaseButton__icon controls-icon_size-m controls-icon icon-ArrangeList03"
        tabindex="0"
      />
    </span>
  </span>
</div>
`;

exports[`Controls/ToggleButton viewMode=pushButton and inlineHeight=l 1`] = `
<div>
  <span
    class="controls-BaseButton controls-Button_clickable controls-Button_bg-same controls-button-style controls-button_pushButton-style controls-button_size-l controls-button_pushButton-secondary-style  controls-button_fontColorStyle-undefined-style  controls-Button_notCircle controls-button_fontsize-m controls-notFocusOnEnter controls_toggle_theme-default "
    tabindex="0"
  >
    <span
      class="controls-BaseButton__wrapper controls-Button__wrapper_viewMode-pushButton controls-BaseButton__wrapper_captionPosition_end controls-Button_textAlign-center"
    />
  </span>
</div>
`;
